[build-system]
requires = ["hatchling",
	"torch",
	"torchvision",
	"torchaudio",
	"tensorflow",
	"scikit-learn",
]
build-backend = "hatchling.build"

[project]
name = "DeepLIFT_Lamarr"
version = "0.0.1"
authors = [
  { name="Gernot Schmitz", email="gernot.schmitz@tu-dortmund.de" },
]
description = "Deeplift algorithm to approximate shapley values in neural networks"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/gnoffl/DeepLIFT_Lamarr"
Issues = "https://github.com/gnoffl/DeepLIFT_Lamarr/issues"